--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
+    "@iconify/react": "^5.0.2",
+    "@react-dev-inspector/vite-plugin": "^2.0.1",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.2",
@@ -22,6 +24,7 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.12",
     "globals": "^15.9.0",
+    "react-dev-inspector": "^2.0.1",
     "sass": "^1.79.5",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.7.0",
