--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "vite-lawyer",
   "private": true,
+  "homepage": "https://MrBJasak.github.io/vite-lawyer",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "react": "^18.3.1",
@@ -23,6 +26,7 @@
     "eslint": "^9.11.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.12",
+    "gh-pages": "^6.2.0",
     "globals": "^15.9.0",
     "react-dev-inspector": "^2.0.1",
     "sass": "^1.79.5",
