--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-intersection-observer": "^9.14.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
@@ -27,6 +29,7 @@
     "@react-dev-inspector/vite-plugin": "^2.0.1",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
+    "@types/react-modal": "^3.16.3",
     "@vitejs/plugin-react": "^4.3.2",
     "eslint": "^9.11.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
